--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,12 @@ main {
   margin: 0 auto;
 }
 
+.main {
+  margin-top: 40px;
+  width: 40%;
+  min-width: 300px;
+}
+
 .search-box .search-bar {
   display: block;
   width: 100%;
@@ -42,7 +48,7 @@ main {
   appearance: none;
   background: none;
   border: none;
-  outline-color: white;
+  outline: transparent;
 
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 16px;
@@ -112,12 +118,12 @@ main {
 }
 h1 {
   color: white;
-  font-size: 5rem;
+  font-size: 6rem;
   text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
 }
 
 h3 {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   padding-top: 16px;
   color: white;
   text-shadow: 2px 2px rgba(50, 50, 70, 0.5);
@@ -135,5 +141,11 @@ h3 {
   h3 {
     font-size: 1.2rem;
     padding: 6vh 30px;
+  }
+  h1 {
+    font-size: 5rem;
+  }
+  .main {
+    margin-top: 0px;
   }
 }
