--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-body {
   font-family: 'motseratt', sans-serif;
 }
 
 .app {
   background-color: #f3e882;
-  background-size: cover;
-  background-position: bottom;
   transition: 0.4s ease-out;
   height: 100vh;
   width: 100vw;
@@ -21,53 +16,65 @@ body {
   background-color: lightskyblue;
 }
 
-main {
-  min-height: 100vh;
-  background: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0.1),
-    rgba(0, 0, 0, 0.3)
-  );
-  padding: 10px;
+.home {
+  height: 100vh;
+  width: 100vw;
+  padding: 5%;
 }
 
-.search-box {
-  width: 100%;
+.home__heading {
+  padding-top: 20vh;
+  text-align: center;
+}
+
+.home__heading--one {
+  color: white;
+  font-size: 4.2rem;
+  text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
+}
+
+.home__heading--two {
+  font-size: 1.5rem;
+  padding-top: 16px;
+  color: white;
+  text-shadow: 2px 2px rgba(50, 50, 70, 0.5);
+}
+
+.weather__search-box {
+  width: 90%;
   margin: 0 auto;
 }
 
-.main {
-  margin-top: 40px;
-  width: 40%;
-  min-width: 300px;
+.home__search-box {
+  width: 90%;
+  margin: 20px auto;
 }
 
-.search-box .search-bar {
+.search-box__input,
+.search-box__input {
   display: block;
   width: 100%;
   padding: 15px;
-
-  appearance: none;
-  background: none;
   border: none;
   outline: transparent;
-
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 16px;
-  margin-top: -5px;
-
   box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
-
   color: #313131;
   font-size: 24px;
   transition: 0.4s ease;
 }
 
-.search-box .search-bar:focus {
+.search-box__input:focus,
+.search-box__input:focus {
   background-color: rgba(255, 255, 255, 0.65);
 }
 
-.location-box .location {
+.weather__location {
+  text-align: center;
+}
+
+.general-info__location {
   color: white;
   font-size: 32px;
   font-weight: 500;
@@ -76,7 +83,7 @@ main {
   padding-top: 15vh;
 }
 
-.location-box .date {
+.general-info__date {
   color: #ffffff;
   font-size: 20px;
   font-weight: 300;
@@ -85,11 +92,11 @@ main {
   text-shadow: 2px 2px rgba(50, 50, 70, 0.5);
 }
 
-.weather-box {
+.weather__info {
   text-align: center;
 }
 
-.weather-box .temp {
+.info__temperature {
   position: relative;
   display: inline-block;
   margin: 30px auto;
@@ -107,47 +114,31 @@ main {
   box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
 }
 
-.weather-box .weather {
+.info__weather {
   color: #ffffff;
   font-size: 48px;
   font-weight: 700;
   text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
 }
 
-.logo {
-  padding-top: 25vh;
-  text-align: center;
-}
-h1 {
-  color: white;
-  font-size: 6rem;
-  text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
-}
-
-h3 {
-  font-size: 1.5rem;
-  padding-top: 16px;
-  color: white;
-  text-shadow: 2px 2px rgba(50, 50, 70, 0.5);
-}
-
-@media screen and (max-width: 510px) {
+@media screen and (min-width: 650px) {
   body {
     overflow: hidden;
   }
 
-  .logo {
+  .home__heading {
     padding-top: 15vh;
   }
 
-  h3 {
-    font-size: 1.2rem;
-    padding: 6vh 30px;
+  .home__heading--one {
+    font-size: 6rem;
   }
-  h1 {
-    font-size: 5rem;
+
+  .home__heading--two {
+    font-size: 2rem;
   }
-  .main {
-    margin-top: 0px;
+
+  .home__search-box {
+    width: 70%;
   }
 }
