--- a/src/index.css
+++ b/src/index.css
@@ -87,16 +87,16 @@
 
 .general-info__location {
   color: white;
-  font-size: 32px;
+  font-size: 2.7rem;
   font-weight: 600;
   text-align: center;
   text-shadow: 2px 2px rgba(50, 50, 70, 0.5);
-  padding-top: 15vh;
+  margin-top: 12vh;
 }
 
 .general-info__date {
   color: #ffffff;
-  font-size: 20px;
+  font-size: 1.4rem;
   font-weight: 500;
   font-style: italic;
   text-align: center;
@@ -115,7 +115,7 @@
   border-radius: 16px;
   padding: 15px 25px;
   color: #ffffff;
-  font-size: 102px;
+  font-size: 5.2rem;
   font-weight: 900;
   text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
   text-align: center;
@@ -135,20 +135,19 @@
   width: 100vw;
   height: 100vh;
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
 .not-found__container {
   width: 100%;
   text-align: center;
+  margin-bottom: 20vh;
 }
 
 .not-found__heading {
   color: #fff;
   font-weight: 600;
   font-size: 3rem;
-
   text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
 }
 
@@ -165,9 +164,20 @@
     font-size: 2rem;
   }
 
-  .weather__search-box,
+  .weather__search-box {
+    width: 80%;
+  }
+
   .home__search-box {
     width: 70%;
+  }
+
+  .general-info__location {
+    font-size: 3rem;
+  }
+
+  .info__temperature {
+    font-size: 7rem;
   }
 
   .search-box__input {
